removendo commit indevido